--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -12,7 +12,7 @@
     <title>{{ title }}</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css'  %}" rel="stylesheet">
+    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
 
@@ -34,11 +34,20 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'products:products' %}">Каталог <i class="fas fa-shopping-bag"></i> </a>
+                    <a class="nav-link" href="{% url 'products:products' %}">Каталог <i class="fas fa-shopping-bag"></i>
+                    </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url "users:login" %}">Войти <i class="fas fa-sign-in-alt"></i></a>
-                </li>
+                {% if user %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url "users:profile" %}">{{ user.username }}<i
+                                class="fas fa-sign-in-alt"></i></a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url "users:login" %}">Войти <i class="fas fa-sign-in-alt"></i></a>
+                    </li>
+                {% endif %}
+
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">
@@ -46,7 +55,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li>
-                            <a class="dropdown-item" href="users/profile.html">Профиль</a>
+                            <a class="dropdown-item" href="{% url 'users:profile' %}">Профиль</a>
                         </li>
                         <li><a class="dropdown-item" href="orders/orders.html">Заказы</a></li>
                         <li><a class="dropdown-item" href="#">Админ-панель</a></li>
@@ -71,7 +80,7 @@
 {% endblock %}
 
 
-{% block footer%}
+{% block footer %}
 
 {% endblock %}
 
