--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,5 +1,5 @@
 {% extends 'users/base.html' %}
-
+{% load socialaccount %}
 {% block content %}
     <main>
         <div class="container">
@@ -47,7 +47,7 @@
                                         <i class="fab fa-google fa-2x" style="color: #d9503e;"></i>
                                     </a>
 
-                                    <a href="#">
+                                    <a href="{% provider_login_url 'github' %}">
                                         <i class="fab fa-github fa-2x" style="color: #303030;"></i>
                                     </a>
                                     <a href="#">
