--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,6 +1,7 @@
 {% extends 'products/base.html' %}
 {% load static %}
 {% load cache %}
+{% load humanize %}
 {% block css %}
     <link href="{% static 'vendor/css/products.css' %}" rel="stylesheet">
 {% endblock %}
@@ -81,7 +82,7 @@
                                         <h4 class="card-title">
                                             <a href="#">{{ product.name }}</a>
                                         </h4>
-                                        <h5>{{ product.price }} руб.</h5>
+                                        <h5>{{ product.price | intcomma }} руб.</h5>
                                         <p class="card-text">{{ product.description }}</p>
                                     </div>
 
