--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -69,13 +69,15 @@
 
                 <!-- Products grid -->
                 <div class="row">
-                    {% cache 3 products %}
+                    {% cache 1 products %}
                         {% for product in products %}
                             <div class="col-lg-4 col-md-6 mb-4">
                                 <div class="card h-100">
                                     <a href="#">
                                         <img class="card-img-top"
+                                                {% if product.image %}
                                              src="{{ product.image.url }}"
+                                                {% endif %}
                                              alt="{{ product.name }}">
                                     </a>
 
